[package]
name = "mem_macros"
version = "1.0.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
repository = "https://gitlab.com/KonradBorowski/mem_macros"
license = "MIT OR Apache-2.0"
description = "align_of and size_of as a macro, to avoid turbofish notation"
keywords = ["no_std"]
categories = ["memory-management", "no-std", "rust-patterns"]
documentation = "https://docs.rs/mem_macros"
readme = "README.md"

[badges]
gitlab = { repository = "KonradBorowski/mem_macros" }
maintenance = { status = "deprecated" }
